Make project build/test-able with JDK8